@@ -91,7 +91,6 @@ subtest 'No headers' => sub {
         'Can request';
 
     is $span->{otel}, {
-        status     => { code => SPAN_STATUS_OK },
         ended      => T,
         kind       => SPAN_KIND_CLIENT,
         name       => 'POST',
@@ -227,7 +226,6 @@ subtest 'Requested headers' => sub {
     ) => object { call message => 'TEST' } => 'Can request';
 
     is $span->{otel}, {
-        status     => { code => SPAN_STATUS_OK },
         ended      => T,
         kind       => SPAN_KIND_CLIENT,
         name       => 'GET',
